Added build vars and removed leftover in Babel

--- a/.babelrc
+++ b/.babelrc
@@ -4,13 +4,11 @@
         ["@babel/preset-typescript", { "jsxPragma": "h" }]
     ],
     "plugins": [
-        "babel-plugin-macros",
+        ["babel-plugin-macros"],
         [
             "@babel/plugin-transform-react-jsx",
             {
                 "runtime": "automatic"
-                // "pragma": "h",
-                // "pragmaFrag": "Fragment"
             }
         ]
     ]
