--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
             "components/*": ["./components/*"],
             "hooks/*": ["./hooks/*"],
             "pages/*": ["./pages/*"],
-            "styles/*": ["./styles/*"]
+            "styles/*": ["./styles/*"],
+            "lib/*": ["./lib/*"]
         },
         "resolveJsonModule": true,
         "skipLibCheck": true,
