Added react-feather and cleaned up Breadcrumb.tsx

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@seznam/compose-react-refs": "^1.0.5",
         "clsx": "^1.1.1",
         "preact": "^10.5.7",
+        "react-feather": "^2.0.9",
         "react-hook-form": "^6.13.1",
         "react-icons": "^4.1.0",
         "react-router-dom": "^5.2.0",
@@ -48,6 +49,7 @@
         "@babel/preset-env": "^7.12.11",
         "@babel/preset-react": "^7.12.10",
         "@babel/preset-typescript": "^7.12.7",
+        "@svgr/webpack": "^5.5.0",
         "@tailwindcss/custom-forms": "^0.2.1",
         "@types/classnames": "^2.2.11",
         "@types/react": "^17.0.0",
