Added lodash and scroll detection
+ Highlight taskconfig on scrolling

--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
     ],
     "plugins": [
         ["babel-plugin-macros"],
+        ["lodash"],
         [
             "@babel/plugin-transform-react-jsx",
             {
