--- a/package.json
+++ b/package.json
@@ -32,13 +32,17 @@
         "@hookform/resolvers": "^1.2.0",
         "@reduxjs/toolkit": "^1.5.0",
         "@seznam/compose-react-refs": "^1.0.5",
+        "@types/lodash": "^4.14.166",
+        "@types/react-redux": "^7.1.14",
         "clsx": "^1.1.1",
+        "lodash": "^4.17.20",
         "preact": "^10.5.7",
         "react-feather": "^2.0.9",
         "react-hook-form": "^6.13.1",
         "react-icons": "^4.1.0",
         "react-router-dom": "^5.2.0",
         "react-svg-loader": "^3.0.3",
+        "react-use-scrollspy": "^2.0.0",
         "styled-components": "^5.2.1",
         "tailwindcss": "^2.0.1",
         "twin.macro": "^2.0.7",
@@ -59,6 +63,7 @@
         "@typescript-eslint/eslint-plugin": "^4.9.0",
         "@typescript-eslint/parser": "^4.9.0",
         "babel-loader": "^8.2.2",
+        "babel-plugin-lodash": "^3.3.4",
         "babel-plugin-macros": "^3.0.1",
         "brotli-webpack-plugin": "^1.1.0",
         "clean-webpack-plugin": "^3.0.0",
