--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react-feather": "^2.0.9",
         "react-hook-form": "^6.13.1",
         "react-icons": "^4.1.0",
+        "react-redux": "^7.2.2",
         "react-router-dom": "^5.2.0",
         "react-svg-loader": "^3.0.3",
         "react-use-scrollspy": "^2.0.0",
