--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "react-router-dom": "^5.2.0",
         "react-svg-loader": "^3.0.3",
         "react-use-scrollspy": "^2.0.0",
+        "redux-thunk": "^2.3.0",
         "styled-components": "^5.2.1",
         "tailwindcss": "^2.0.1",
         "twin.macro": "^2.0.7",
