--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
         "jsxFactory": "h",
         "jsxFragmentFactory": "Fragment",
         "lib": ["es2020", "dom", "dom.iterable"],
-        "module": "es6",
+        "module": "commonjs",
         "moduleResolution": "node",
         "noImplicitAny": true,
         "outDir": "./dist/",
@@ -19,8 +19,8 @@
             "hooks/*": ["./hooks/*"],
             "pages/*": ["./pages/*"],
             "styles/*": ["./styles/*"],
-            "lib/*": ["./lib/*"],
-            "edna@redux/*": ["./redux/*"]
+            "lib": ["./lib"],
+            "root@redux/*": ["./redux/*"]
         },
         "resolveJsonModule": true,
         "skipLibCheck": true,
