--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "build": "webpack --mode=production",
         "watch": "webpack --mode=development --watch",
         "dev": "webpack --mode=development",
-        "lint": "eslint '*.{ts,tsx,js,jsx}' && tsc --pretty --noEmit",
+        "lint": "eslint . --ext .ts, .tsx && tsc --pretty --noEmit",
+        "lint-fix": "eslint . --ext .ts, .tsx --fix && tsc --pretty --noEmit",
         "start": "webpack serve --mode=development"
     },
     "keywords": [],
@@ -74,6 +75,9 @@
         "css-minimizer-webpack-plugin": "^1.1.5",
         "eslint": "^7.15.0",
         "eslint-config-prettier": "^6.15.0",
+        "eslint-import-resolver-alias": "^1.1.2",
+        "eslint-import-resolver-webpack": "^0.13.0",
+        "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^3.2.0",
         "eslint-plugin-react": "^7.21.5",
