Added hyperflush and update rtc utilities
Fixed production build not working

This is super weird. Get unexpected token "..." if IE 11 is omitted from broweserlist

Fixed number input not working

--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,8 @@
 {
     "presets": [
-        ["@babel/preset-env", { "modules": false }],
-        ["@babel/preset-typescript", { "jsxPragma": "h" }]
+        ["@babel/preset-env", { "modules": false, "useBuiltIns": "usage", "corejs": 3 }],
+        ["@babel/preset-react", { "runtime": "automatic" }],
+        "@babel/typescript"
     ],
-    "plugins": [
-        ["babel-plugin-macros"],
-        ["lodash"],
-        [
-            "@babel/plugin-transform-react-jsx",
-            {
-                "runtime": "automatic"
-            }
-        ]
-    ]
+    "plugins": ["babel-plugin-macros", "lodash"]
 }
