--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "webpack --mode=production",
         "watch": "webpack --mode=development --watch",
         "dev": "webpack --mode=development",
-        "lint": "eslint . --ext .ts, .tsx && tsc --pretty --noEmit",
+        "lint": "eslint . --ext .ts,.tsx && tsc --pretty --noEmit",
         "lint-fix": "eslint . --ext .ts, .tsx --fix && tsc --pretty --noEmit",
         "start": "webpack serve --mode=development"
     },
@@ -16,10 +16,10 @@
     "author": "Kawin Pechetratanapanit",
     "license": "ISC",
     "browserslist": [
+        "defaults",
         ">0.5%",
         "last 2 versions",
         "not dead",
-        "not ie <= 11",
         "not op_mini all"
     ],
     "babelMacros": {
@@ -53,6 +53,11 @@
     },
     "devDependencies": {
         "@babel/core": "^7.12.10",
+        "@babel/plugin-proposal-class-properties": "^7.12.1",
+        "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+        "@babel/plugin-proposal-throw-expressions": "^7.12.1",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/plugin-transform-regenerator": "^7.12.1",
         "@babel/preset-env": "^7.12.11",
         "@babel/preset-react": "^7.12.10",
         "@babel/preset-typescript": "^7.12.7",
@@ -71,6 +76,7 @@
         "brotli-webpack-plugin": "^1.1.0",
         "clean-webpack-plugin": "^3.0.0",
         "compression-webpack-plugin": "^6.1.1",
+        "core-js": "^3.8.2",
         "css-loader": "^5.0.1",
         "css-minimizer-webpack-plugin": "^1.1.5",
         "eslint": "^7.15.0",
@@ -86,7 +92,7 @@
         "html-inline-css-webpack-plugin": "^1.9.1",
         "html-webpack-harddisk-plugin": "^1.0.2",
         "html-webpack-inline-source-plugin": "0.0.10",
-        "html-webpack-plugin": "^4.5.0",
+        "html-webpack-plugin": "^5.0.0-beta.4",
         "mini-css-extract-plugin": "^1.3.3",
         "postcss": "^8.1.14",
         "postcss-loader": "^4.1.0",
@@ -95,6 +101,7 @@
         "react-dev-utils": "^11.0.1",
         "style-loader": "^2.0.0",
         "tailwindcss-debug-screens": "^2.0.0",
+        "ts-loader": "^8.0.14",
         "typescript": "^4.1.3",
         "url-loader": "^4.1.1",
         "webpack": "^5.11.1",
