--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,8 @@
 {
     "presets": [
         ["@babel/preset-env", { "modules": false, "useBuiltIns": "usage", "corejs": 3 }],
-        ["@babel/preset-react", { "runtime": "automatic" }],
+        ["@babel/preset-react", { "runtime": "automatic", "importSource": "@emotion/react" }],
         "@babel/typescript"
     ],
-    "plugins": ["babel-plugin-macros", "lodash"]
+    "plugins": ["babel-plugin-macros", "@emotion", "lodash"]
 }
