--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     ],
     "babelMacros": {
         "twin": {
-            "preset": "styled-components",
             "config": "tailwind.config.js",
             "format": "auto"
         }
     },
     "dependencies": {
+        "@emotion/css": "^11.1.3",
+        "@emotion/react": "^11.1.4",
+        "@emotion/styled": "^11.0.0",
         "@hookform/resolvers": "^1.2.0",
         "@reduxjs/toolkit": "^1.5.0",
         "@seznam/compose-react-refs": "^1.0.5",
@@ -46,7 +48,6 @@
         "react-svg-loader": "^3.0.3",
         "react-use-scrollspy": "^2.0.0",
         "redux-thunk": "^2.3.0",
-        "styled-components": "^5.2.1",
         "tailwindcss": "^2.0.2",
         "twin.macro": "^2.0.7",
         "zod": "^1.11.11"
@@ -61,6 +62,7 @@
         "@babel/preset-env": "^7.12.11",
         "@babel/preset-react": "^7.12.10",
         "@babel/preset-typescript": "^7.12.7",
+        "@emotion/babel-plugin": "^11.1.2",
         "@svgr/webpack": "^5.5.0",
         "@tailwindcss/custom-forms": "^0.2.1",
         "@types/classnames": "^2.2.11",
