--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "watch": "webpack --mode=development --watch",
         "dev": "webpack --mode=development",
         "lint": "eslint . --ext .ts,.tsx && tsc --pretty --noEmit",
-        "lint-fix": "eslint . --ext .ts, .tsx --fix && tsc --pretty --noEmit",
+        "lint-fix": "eslint . --ext .ts,.tsx --fix && tsc --pretty --noEmit",
         "start": "webpack serve --mode=development"
     },
     "keywords": [],
@@ -37,39 +37,29 @@
         "@seznam/compose-react-refs": "^1.0.5",
         "@types/lodash": "^4.14.166",
         "@types/react-redux": "^7.1.14",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
+        "@types/react-router-dom": "^5.1.7",
         "clsx": "^1.1.1",
         "lodash": "^4.17.20",
+        "phosphor-react": "^1.1.2",
         "preact": "^10.5.8",
-        "react-feather": "^2.0.9",
         "react-hook-form": "^6.13.1",
-        "react-icons": "^4.1.0",
         "react-redux": "^7.2.2",
         "react-router-dom": "^5.2.0",
         "react-svg-loader": "^3.0.3",
-        "react-use-scrollspy": "^2.0.0",
-        "redux-thunk": "^2.3.0",
         "tailwindcss": "^2.0.2",
         "twin.macro": "^2.0.7",
         "zod": "^1.11.11"
     },
     "devDependencies": {
         "@babel/core": "^7.12.10",
-        "@babel/plugin-proposal-class-properties": "^7.12.1",
-        "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-        "@babel/plugin-proposal-throw-expressions": "^7.12.1",
-        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@babel/plugin-transform-regenerator": "^7.12.1",
         "@babel/preset-env": "^7.12.11",
         "@babel/preset-react": "^7.12.10",
         "@babel/preset-typescript": "^7.12.7",
         "@emotion/babel-plugin": "^11.1.2",
         "@svgr/webpack": "^5.5.0",
         "@tailwindcss/custom-forms": "^0.2.1",
-        "@types/classnames": "^2.2.11",
-        "@types/react": "^17.0.0",
-        "@types/react-dom": "^17.0.0",
-        "@types/react-router-dom": "^5.1.7",
-        "@types/styled-components": "^5.1.7",
         "@typescript-eslint/eslint-plugin": "^4.9.1",
         "@typescript-eslint/parser": "^4.9.1",
         "babel-loader": "^8.2.2",
@@ -103,7 +93,6 @@
         "react-dev-utils": "^11.0.1",
         "style-loader": "^2.0.0",
         "tailwindcss-debug-screens": "^2.0.0",
-        "ts-loader": "^8.0.14",
         "typescript": "^4.1.3",
         "url-loader": "^4.1.1",
         "webpack": "^5.11.1",
