--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,12 @@
 {
-    "tabWidth": 4,
-    "useTabs": false,
-    "trailingComma": "es5",
     "arrowParens": "avoid",
-    "printWidth": 100,
-    "jsxBracketSameLine": true,
     "bracketSpacing": true,
-    "jsxSingleQuote": false,
     "htmlWhitespaceSensitivity": "ignore",
-    "semi": true
+    "jsxBracketSameLine": true,
+    "jsxSingleQuote": false,
+    "printWidth": 100,
+    "semi": true,
+    "tabWidth": 4,
+    "trailingComma": "es5",
+    "useTabs": false
 }
