--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "lint": "eslint . --ext .ts,.tsx,.js,.jsx && tsc --pretty --noEmit",
         "lint-fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix && tsc --pretty --noEmit",
         "start": "webpack serve --mode=development",
-        "clean-install": "rm -rf node_modules && npm cache verify && npm ci"
+        "clean-install": "rm -rf node_modules && npm cache verify && npm ci",
+        "release": "release-it"
     },
     "keywords": [],
     "author": "Kawin Pechetratanapanit",
@@ -59,6 +60,7 @@
         "@babel/preset-react": "^7.12.10",
         "@babel/preset-typescript": "^7.12.7",
         "@emotion/babel-plugin": "^11.1.2",
+        "@release-it/keep-a-changelog": "^2.2.2",
         "@svgr/webpack": "^5.5.0",
         "@tailwindcss/custom-forms": "^0.2.1",
         "@typescript-eslint/eslint-plugin": "^4.9.1",
@@ -94,6 +96,7 @@
         "postcss-preset-env": "^6.7.0",
         "prettier": "^2.2.1",
         "react-dev-utils": "^11.0.1",
+        "release-it": "^14.2.2",
         "style-loader": "^2.0.0",
         "tailwindcss-debug-screens": "^2.0.0",
         "typescript": "^4.1.3",
