--- a/.release-it.json
+++ b/.release-it.json
@@ -1,8 +1,20 @@
 {
+    "git": {
+        "tagAnnotation": "Release v${version}",
+        "commitMessage": "Release v${version}"
+    },
     "github": {
-        "release": true
+        "release": true,
+        "releaseName": "Release v${version}"
     },
     "npm": {
         "publish": false
+    },
+    "plugins": {
+        "@release-it/keep-a-changelog": {
+            "filename": "CHANGELOG.md",
+            "strictLatest": false,
+            "keepUnreleased": true
+        }
     }
 }
