--- a/.release-it.json
+++ b/.release-it.json
@@ -10,11 +10,5 @@
     "npm": {
         "publish": false
     },
-    "plugins": {
-        "@release-it/keep-a-changelog": {
-            "filename": "CHANGELOG.md",
-            "strictLatest": false,
-            "keepUnreleased": true
-        }
-    }
+    "plugins": {}
 }
