--- a/package.json
+++ b/package.json
@@ -86,6 +86,8 @@
         "html-webpack-harddisk-plugin": "^1.0.2",
         "html-webpack-inline-source-plugin": "0.0.10",
         "html-webpack-plugin": "^5.0.0-beta.4",
+        "husky": "^4.3.7",
+        "lint-staged": "^10.5.3",
         "mini-css-extract-plugin": "^1.3.3",
         "postcss": "^8.1.14",
         "postcss-loader": "^4.1.0",
