changed url settings

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -17,8 +17,8 @@ title: ednaUI Documentation
 email: open.sensing@oregonstate.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Documentation for ednaUI
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/ednaUI" # the subpath of your site, e.g. /blog
+url: "https://openslab-osu.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
