--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,6 +24,7 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
+#remote_theme: pmarsceill/just-the-docs
 theme: minima
 #plugins:
 #  - jekyll-feed
