--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -8,7 +8,7 @@ gem 'pathutil', '~> 0.9.0'
 #
 # This will help ensure the proper Jekyll version is running.
 # Happy Jekylling!
-#gem "jekyll", "~> 3.9.0"
+gem "jekyll", "~> 3.9.0"
 
 # This is the default theme for new Jekyll sites. You may change this to anything you like.
 #gem "minima", "~> 2.0"
@@ -39,3 +39,5 @@ gem "wdm", "~> 0.1.0", :install_if => Gem.win_platform?
 # kramdown v1, comment out this line.
 gem "kramdown-parser-gfm"
 
+
+gem "webrick", "~> 1.7"
