--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,11 +16,11 @@
 title: ednaUI Documentation
 email: open.sensing@oregonstate.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  Documentation for ednaUI
+    Documentation for ednaUI
 baseurl: "/ednaUI" # the subpath of your site, e.g. /blog
 url: "https://openslab-osu.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username: jekyll
 
 # Build settings
 markdown: kramdown
@@ -28,6 +28,11 @@ remote_theme: pmarsceill/just-the-docs
 #theme: minima
 #plugins:
 #  - jekyll-feed
+
+# kramdown:
+#     syntax_highlighter_opts:
+#         block:
+#             line_numbers: true
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
